footer alignment fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,14 +211,13 @@ footer .copyright {
 }
 
 footer .extra-links {
-  flex: 1.3;
+  flex: 1;
   height: 100%;
 }
 
 footer .extra-links ul {
   display: flex;
-  justify-content: right;
-  text-align: right;
+  justify-content: left;
 }
 
 footer.flex .extra-links ul li a {
